...
        ])

        shareButton.accessibilityValue = "Save Button"
        saveButton.setImage(StyleKit.imageOfDownloadCanvas(frame: CGRect(x: 0, y: 0, width: 38, height: 38)), forState: .Normal)
        saveButton.addTarget(self, action: #selector(didTouchSave), forControlEvents: .TouchUpInside)

        shareButton.accessibilityValue = "Share Button"
        shareButton.setImage(StyleKit.imageOfShareCanvas(frame: CGRect(x: 0, y: 0, width: 38, height: 38)), forState: .Normal)
        shareButton.addTarget(self, action: #selector(didTouchShare), forControlEvents: .TouchUpInside)

        let stackView = UIStackView()
        stackView.axis = .Horizontal
        stackView.distribution = .FillEqually
...
}

extension DrawViewController {

    func showMessage(title: String, message: String, handler: ((UIAlertAction) -> Void)? = nil) {
        let alertController = UIAlertController(title: title, message: message, preferredStyle: .Alert)
        let okAction = UIAlertAction(title: "OK", style: .Default, handler: handler)
        alertController.addAction(okAction)
        presentViewController(alertController, animated: true, completion: nil)
    }

}

